--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ApiAuthentication</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title>Api Authentication</title>
+    <meta name='title' title='test' />
+    <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
+    <meta content='test test' name='description' />
+    <meta content='blah' name='keywords' />
+    <%= javascript_include_tag 'jquery-min', 'reflection' %>
+    <%= stylesheet_link_tag "new", 'common' %>
+  </head>
+  <body>
+    <script>
+      $(document)   .ready(function(){
+        $('.reflect').reflect();
+      });
+    </script>
+    <div id="header">
+      <div id="user_nav">
+<%# if user_signed_in? %>
+<%#= link_to "Sign out #{current_user.email}", destroy_user_session_path, :class => "small_button" %>
+<%#= link_to "Edit Profile" , edit_user_registration_path , :class => "small_button" %>
+<%# else %>
+<%#= link_to "Sign up", new_user_registration_path, :class => "small_button" %>
+<%# end %>
+      </div>
+      <div id="logo" >
+        <%= link_to "Api Authentication", "/", :style => "color:#fff;font-weight:bold;font-size:30px" %>
+      </div>
+    </div><br />
+    <div id="container">
+      <% if notice %>
+        <div class='notice'>
+          <%= notice  %>
+        </div>
+      <% end %>
+      <% if alert %>
+        <div class='alert'>
+          <%= alert  %>
+        </div>
+      <% end %>
+      <div class="breadcrumb">
+        <%= yield :breadcrumb  %>
+      </div><br />
+      <div id="layout">
+        <%= yield %>
+      </div>
+    </div>
+    <div id="footer">
+      <div id='copyright'></div>
+    </div>
+  </body>
 </html>
