--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
     <meta content='test test' name='description' />
     <meta content='blah' name='keywords' />
-    <%= javascript_include_tag 'jquery-min', 'reflection' %>
+    <%= javascript_include_tag 'jquery-min', 'reflection', 'cufon-yui' %>
     <%= stylesheet_link_tag "new", 'common' %>
   </head>
   <body>
@@ -17,12 +17,19 @@
     </script>
     <div id="header">
       <div id="user_nav">
-<% if user_signed_in? %>
-<%= link_to "Sign out #{current_user.email}", destroy_user_session_path, :class => "small_button" %>
-<%= link_to "Edit Profile" , edit_user_registration_path , :class => "small_button" %>
-<% else %>
-<%= link_to "Sign up", new_user_registration_path, :class => "small_button" %>
-<% end %>
+        <% if user_signed_in? %>
+          <%= link_to "Sign out #{current_user.email}", destroy_user_session_path, :class => "small_button" %>
+          <%= link_to "Edit Profile" , edit_user_registration_path , :class => "small_button" %>
+        <% else %>
+
+        
+          <%= link_to_if params[:controller] !="devise/registrations", "Sign up", new_user_registration_path, :class => "small_button" do
+            link_to "Sign in", new_user_session_path, :class => "small_button"
+          end%>
+
+
+        
+        <% end %>
       </div>
       <div id="logo" >
         <%= link_to "Api Authentication", "/", :style => "color:#fff;font-weight:bold;font-size:30px" %>
