--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,16 @@
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type' />
     <meta content='test test' name='description' />
     <meta content='blah' name='keywords' />
-    <%= javascript_include_tag 'jquery-min', 'reflection', 'cufon-yui' %>
+    <%= javascript_include_tag 'jquery-min', 'reflection', 'cufon-yui', 'caviar-dreams.cufonfonts','myriad-pro.cufonfonts' %>
     <%= stylesheet_link_tag "new", 'common' %>
   </head>
   <body>
-    <script>
-      $(document)   .ready(function(){
+    <script type="text/javascript">
+       Cufon.replace('#logo', { fontFamily: 'Myriad Pro Bold Condensed', hover: true });
+      Cufon.replace('h2', { fontFamily: 'Myriad Pro Semibold', hover: true });
+        Cufon.replace('label', { fontFamily: 'Myriad Pro Regular', hover: true });
+     
+      $(document).ready(function(){
         $('.reflect').reflect();
       });
     </script>
