--- a/public/stylesheets/new.css
+++ b/public/stylesheets/new.css
@@ -49,7 +49,7 @@ a:hover {
   background-color: #fff;
 }
 
-a.small_button {
+a.small_button, input.small_button {
     color:white;
     padding:2px 5px;
     text-shadow:1px 1px 0 #145982;
@@ -64,6 +64,25 @@ a.small_button {
     -moz-box-shadow:3px 3px 3px #000000;
     -webkit-box-shadow:3px 3px 3px #000000;
     border: #169DD8 solid 1px;
+    border-radius:6px;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+}
+
+a.large_button, input.large_button {
+    color:white;
+    padding:8px 25px;
+    text-shadow:1px 1px 0 #145982;
+    font-family:Arial,Helvetica,sans-serif;
+    font-size:10px;
+    font-weight:bold;
+    text-align:center;
+    margin:5px auto;
+    background-color:  #03507B;
+    box-shadow:3px 3px 3px #000000;
+    -moz-box-shadow:3px 3px 3px #000000;
+    -webkit-box-shadow:2px 2px 2px #3090C7;
+    border: #2B547E solid 1px;
     border-radius:6px;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
