--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,18 @@
-<h2>Sign up</h2>
+<h2 >Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "user_form"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
+  <p><%= f.label :email %>
   <%= f.email_field :email %></p>
 
-  <p><%= f.label :password %><br />
+  <p><%= f.label :password %>
   <%= f.password_field :password %></p>
 
-  <p><%= f.label :password_confirmation %><br />
+  <p><%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.submit "Sign up", :class => "large_button" %></p>
+  <p style="padding-left: 480px"><%= f.submit "Sign up", :class => "large_button" %></p>
 <% end %>
 
 <%#= render :partial => "devise/shared/links" %>
