--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,6 +19,8 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+    <%= f.hidden_field :user_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
