--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,7 +22,7 @@
     <tr>
       <td><%= project.name %></td>
       <td><%= project.description %></td>
-      <td><%= project.user %></td>
+      <td><%= project.user.email %></td>
       <td><%= link_to 'Show', project %></td>
       <td><%= link_to 'Edit', edit_project_path(project) %></td>
       <td><%= link_to 'Destroy', project, :confirm => 'Are you sure?', :method => :delete %></td>
